--- a/assets/css/standard_footer.css
+++ b/assets/css/standard_footer.css
@@ -34,7 +34,7 @@
 }
 
 .footer-flex-item {
-  width: 40%;
+  width: 45%;
   height: auto;
   text-align: left;
   margin: 0 0 0 10%;
