--- a/assets/css/updated_header-media-queries.css
+++ b/assets/css/updated_header-media-queries.css
@@ -87,7 +87,7 @@
         gap: 0 .25rem;
     }
 
-    .dropdown-column {
+    .dropdown-column, .dropdown-column-left {
         width: 100%;
     }
 
